# incus-standalone-ui

./: .docs-commit  .gitignore  .gitmodules  ARCHITECTURE.md  README.md  devenv.nix  flake.nix  index.html  package.json  preseed.md  vite.config.ts
scripts/: build-docs.sh
src/: App.tsx  Settings.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  docs.json
src-tauri/icons/: icon.icns
src-tauri/patches/tray-icon/src/platform_impl/gtk/: mod.rs
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  menu.rs  proxy.rs
