[package]
name    = "tauri-incus"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_incus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-opener  = "2"
tauri-plugin-single-instance = "2"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }

axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
hyper          = { version = "1", features = ["client", "http1"] }
hyper-util     = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
futures-util = "0.3"
rustls = "0.23"

arc-swap    = "1"
lru         = "0.12"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
native-titlebar = []

[patch.crates-io]
tray-icon = { path = "patches/tray-icon" }

[profile.release]
strip = true
lto = true
codegen-units = 1
